apps/matrix/ingressroute-auth.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-auth
  namespace: matrix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.cherkaoui.ch`)
      kind: Rule
      middlewares:
        - name: security-headers-permissive
          namespace: traefik
      services:
        - name: matrix-matrix-authentication-service
          port: 8080
  tls:
    certResolver: letsencrypt
