apps/matrix/ingressroute-wellknown.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-wellknown
  namespace: matrix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.cherkaoui.ch`) && PathPrefix(`/.well-known/matrix`)
      kind: Rule
      services:
        - name: matrix-well-known
          port: 8010
  tls:
    certResolver: letsencrypt
